# home_speak

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  crates.js  help.html  install_service  search-index.js  settings.html  settings.yaml  src-files.js
.github/workflows/: general.yml  rustdoc.yml
configuration/: example_settings.yaml  settings.yaml
debian/: service
examples/: eleven_labs_synthesize.rs  eleven_labs_voices.rs
home_speak/: all.html  index.html  sidebar-items.js
home_speak/audio_cache/: index.html  sidebar-items.js  struct.AudioCache.html
home_speak/configuration/: fn.get_configuration.html  index.html  sidebar-items.js  struct.AppConfig.html  struct.AssistantConfig.html  struct.HomeSpeakZenohConfig.html  struct.MqttConfig.html  struct.TtsServiceConfig.html
home_speak/eleven_labs_client/: constant.DEFAULT_MODEL.html  index.html  sidebar-items.js  struct.ElevenLabsTtsClient.html  struct.Invoice.html  struct.Subscription.html  struct.TtsRequest.html  struct.Voice.html  struct.VoiceSample.html  struct.VoiceSettings.html  struct.Voices.html
home_speak/error/: enum.HomeSpeakError.html  index.html  sidebar-items.js
home_speak/logging/: fn.set_global_tracing_zenoh_subscriber.html  fn.setup_tracing.html  index.html  sidebar-items.js
home_speak/mqtt/: fn.start_mqtt_service.html  index.html  sidebar-items.js
home_speak/mqtt/mqtt_server/: fn.start_mqtt_service.html
home_speak/speech_service/: constant.DEFAULT_ELEVEN_LABS_VOICE_ID.html  enum.AzureVoiceStyle.html  enum.TtsService.html  index.html  sidebar-items.js  struct.AudioMessage.html  struct.AudioRepository.html  struct.AudioService.html  struct.ElevenSpeechService.html  struct.SpeechService.html  trait.Playable.html
home_speak/speech_service/audio_player/: trait.Playable.html
home_speak/speech_service/audio_repository/: struct.AudioRepository.html
home_speak/speech_service/audio_service/: struct.AudioMessage.html  struct.AudioService.html
home_speak/speech_service/azure_gcp_speech_service/: enum.AzureVoiceStyle.html  enum.TtsService.html  struct.SpeechService.html
home_speak/speech_service/eleven_speech_service/: constant.DEFAULT_ELEVEN_LABS_VOICE_ID.html  struct.ElevenSpeechService.html
home_speak/template_messages/: fn.get_human_current_date_time.html  fn.get_human_current_time.html  index.html  sidebar-items.js  struct.TemplateEngine.html
home_speak_server/: all.html  constant.MQTT_AUDIO_PUB_TOPIC.html  fn.main.html  index.html  sidebar-items.js  struct.Opts.html
resources/: README.txt
say_phrase/: all.html  fn.main.html  fn.setup_logging.html  fn.start_speech_service_worker.html  index.html  sidebar-items.js  struct.Opts.html  struct.SpeechServiceHandle.html
src/: alarm_service.rs  audio_cache.rs  blinds.rs  configuration.rs  eleven_labs_client.rs  error.rs  lib.rs  logging.rs  main.rs  mqtt_server.rs  server.rs  speech_service.rs  template_messages.rs
src/home_speak/: audio_cache.rs.html  configuration.rs.html  eleven_labs_client.rs.html  error.rs.html  lib.rs.html  logging.rs.html  template_messages.rs.html
src/home_speak/mqtt/: mod.rs.html  mqtt_server.rs.html  routes.rs.html
src/home_speak/speech_service/: audio_player.rs.html  audio_repository.rs.html  audio_service.rs.html  azure_gcp_speech_service.rs.html  eleven_speech_service.rs.html  mod.rs.html
src/home_speak_server/: home_speak_server.rs.html
src/mqtt/: mod.rs  mqtt_server.rs  router.rs  routes.rs
src/say_phrase/: say_phrase.rs.html
src/speech_service/: audio_player.rs  audio_repository.rs  audio_service.rs  azure_gcp_speech_service.rs  eleven_speech_service.rs  mod.rs
static/: index.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/home_speak/speech_service/audio_player/: trait.Playable.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
