[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
default-run = "home_speak_server"
description = "Text to speech node"
edition = "2021"
license = "MIT OR APACHE"
name = "home_speak"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/home_speak"
version = "0.1.4"

[package.metadata.deb]
assets = [
  [
    "target/release/home_speak_server",
    "/usr/bin/",
    "755",
  ],
  [
    "configuration/settings.yaml",
    "/etc/home_speak/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/home_speak/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
azure_tts = {git = "https://github.com/dmweis/azure_tts", branch = "main"}
google_tts = {git = "https://github.com/dmweis/google_tts", branch = "main"}
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.11"
# fix weird bug with mp3 not playing from start
# rodio = "0.15"
actix-files = {version = "0.6", optional = true}
actix-web = "4"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21.0"
bytes = "1.1"
chrono = "0.4.19"
clap = {version = "3.2", features = ["derive"]}
clokwerk = {git = "https://github.com/dmweis/clokwerk", branch = "main"}
config = "0.13.1"
crossbeam-channel = "0.5"
local-ip-address = "0.4.7"
mqtt-router = {git = "https://github.com/dmweis/mqtt-router", branch = "main"}
num-traits = "0.2.14"
ordinal = "0.3.1"
reqwest = {version = "0.11"}
rodio = {git = "https://github.com/RustAudio/rodio", rev = "55d957f8b40c59fccea4162c4b03f6dd87a7a4d9"}
rumqttc = "0.13.0"
secrecy = {version = "0.8", features = ["serde"]}
sha2 = "0.10"
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs"]}

[features]
hotreload = ["actix-files"]
